# lgcns-mlops-practice

./: batch_prediction.py  batch_prediction.sh  drift_detection.py  train.py
code_snippets/: .pdm-python  README.md  pyproject.toml
src/: preprocess.py
src/common/: logger.py
