[project]
name = "pro"
version = "0.1.0"
description = "n"
authors = [
    {name = "rm", email = "dd"},
    {name = "ray", email = "dd"},
]
dependencies = [
    "bentoml>=1.3.1",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "mlflow>=2.15.1",
    "category-encoders>=2.6.3",
    "pydantic>=2.8.2",
    "deepchecks>=0.18.1",
    "joblib>=1.4.2",
    "rich>=13.7.1",
    "seaborn>=0.13.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "mit"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "pre-commit>=3.5.0",
    "matplotlib>=3.7.5",
    "mypy>=1.11.1",
    "jupyter>=1.0.0",
    "black>=24.8.0",
    "pip>=24.2",
]
